--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press Start to begin!</h1>
   <div class="container">
+    <div class="row">
+
+      <div type="button" class="start">
+        <p>START</p>
+      </div>
+    </div>
     <div class="row">
 
       <div type="button" id="green" class="btn green">
