changing UI and updating javascript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
   <h1 id="level-title">Press Start to begin!</h1>
+  <div class="score-shell">
+    <div class="row score-board">
+      <h1 class="score">Score</h1><h1 class="score-number">0</h1>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row">
 
@@ -39,10 +45,7 @@
 
     </div>
 
-    <div class="row">
-      <h1 class="score">Score</h1>
-      <h1 class="score-number">0</h1>
-    </div>
+
 
   </div>
   <p class="signature">Made by <br><a href="https://github.com/heyhovie/CV-Website.git" target="_blank" rel="noopener noreferrer">takunda hove</a></p>
