--- a/index.html
+++ b/index.html
@@ -10,19 +10,9 @@
 
 <body>
   <h1 id="level-title">Press Start to begin!</h1>
-  <div class="score-shell">
-    <div class="row score-board">
-      <h1 class="score">Score</h1><h1 class="score-number">0</h1>
-    </div>
-  </div>
 
-  <div class="container">
-    <div class="row">
 
-      <div type="button" class="start">
-        <p>START</p>
-      </div>
-    </div>
+  <div class="container container-frame">
     <div class="row">
 
       <div type="button" id="green" class="btn green">
@@ -44,11 +34,16 @@
       </div>
 
     </div>
-
-
-
   </div>
-  <p class="signature">Made by <br><a href="https://github.com/heyhovie/CV-Website.git" target="_blank" rel="noopener noreferrer">takunda hove</a></p>
+  <div class="score-shell">
+    <div class="row score-board">
+      <div type="button" class="start">
+        <p>START</p>
+      </div>
+      <h1 class="score">Score</h1> <h1 class="score-number">0</h1>
+    </div>
+  </div>
+  <p class="signature">Made by <a href="https://github.com/heyhovie/CV-Website.git" target="_blank" rel="noopener noreferrer">Takunda Hove</a></p>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="game.js" charset="utf-8"></script>
